[metadata]
name = genesis-devtools
summary = Tools to manager life cycle of Genesis projects.
description_file =
    README.md
long_description_content_type = text/markdown
author = Genesis Corporation
author_email = anton.kremenetsky@gmail.com
home_page = https://github.com/infraguys/genesis_devtools
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13


[files]
packages =
    genesis_devtools


[package_data]
ubuntu_24 =
    packer/ubuntu_24/*.hcl


[entry_points]
console_scripts =
    genesis = genesis_devtools.cmd.cli:main
